kotlin-parser/src/test/semlang/validatorTests/fail/nameConflict2.sem

// Conflict with a native function
struct Integer.plus {
    foo: Integer
}
